# Memory-Manager

./: Allocator.h  CMakeLists.txt  DoubleEndedStackAllocator.cpp  DoubleEndedStackAllocator.h  StackAllocator.cpp  StackAllocator.h  main.cpp
Allocators/: Allocator.h  DoubleEndedStackAllocator.cpp  DoubleEndedStackAllocator.h  MemoryManager.cpp  MemoryManager.h  PoolAllocator.cpp  PoolAllocator.h  ReferenceCount.h  SmartPointer.h  StackAllocator.cpp  StackAllocator.h
Tests/: DoubleEndedStackAllocatorTest.h  MemoryManagerTest.h  PoolAllocatorTest.h  SmartPointerTest.h  StackAllocatorTest.h
